--- a/AtividadeApp/AtividadeApp.csproj
+++ b/AtividadeApp/AtividadeApp.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Ex5.Designer.cs">
       <DependentUpon>Ex5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ex6.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ex6.Designer.cs">
+      <DependentUpon>Ex6.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ex5.resx">
       <DependentUpon>Ex5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ex6.resx">
+      <DependentUpon>Ex6.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
