--- a/AtividadeApp/AtividadeApp.csproj
+++ b/AtividadeApp/AtividadeApp.csproj
@@ -83,6 +83,12 @@
     <Compile Include="Ex6.Designer.cs">
       <DependentUpon>Ex6.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ex7.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ex7.Designer.cs">
+      <DependentUpon>Ex7.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Ex6.resx">
       <DependentUpon>Ex6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ex7.resx">
+      <DependentUpon>Ex7.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
