--- a/AtividadeApp/AtividadeApp.csproj
+++ b/AtividadeApp/AtividadeApp.csproj
@@ -125,8 +125,20 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="PovaEx3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PovaEx3.Designer.cs">
+      <DependentUpon>PovaEx3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProvaEx1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProvaEx1.Designer.cs">
+      <DependentUpon>ProvaEx1.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Ex1.resx">
       <DependentUpon>Ex1.cs</DependentUpon>
     </EmbeddedResource>
@@ -163,6 +175,9 @@
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PovaEx3.resx">
+      <DependentUpon>PovaEx3.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -172,6 +187,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ProvaEx1.resx">
+      <DependentUpon>ProvaEx1.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
