--- a/AtividadeApp/AtividadeApp.csproj
+++ b/AtividadeApp/AtividadeApp.csproj
@@ -101,17 +101,35 @@
     <Compile Include="Ex4.Designer.cs">
       <DependentUpon>Ex4.cs</DependentUpon>
     </Compile>
+    <Compile Include="ex4Bim4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ex4Bim4.Designer.cs">
+      <DependentUpon>ex4Bim4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ex5.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Ex5.Designer.cs">
       <DependentUpon>Ex5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ex5BBim4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ex5BBim4.Designer.cs">
+      <DependentUpon>Ex5BBim4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ex6.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Ex6.Designer.cs">
       <DependentUpon>Ex6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ex6Bim4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ex6Bim4.Designer.cs">
+      <DependentUpon>Ex6Bim4.cs</DependentUpon>
     </Compile>
     <Compile Include="Ex7.cs">
       <SubType>Form</SubType>
@@ -175,14 +193,26 @@
     <EmbeddedResource Include="Ex3.resx">
       <DependentUpon>Ex3.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Ex3BIm4.resx">
+      <DependentUpon>Ex3BIm4.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Ex4.resx">
       <DependentUpon>Ex4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ex4Bim4.resx">
+      <DependentUpon>ex4Bim4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ex5.resx">
       <DependentUpon>Ex5.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Ex5BBim4.resx">
+      <DependentUpon>Ex5BBim4.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Ex6.resx">
       <DependentUpon>Ex6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ex6Bim4.resx">
+      <DependentUpon>Ex6Bim4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ex7.resx">
       <DependentUpon>Ex7.cs</DependentUpon>
